--- a/UI/codepulse/src/app/fratures/blog-post/add-blogpost/add-blogpost.component.html
+++ b/UI/codepulse/src/app/fratures/blog-post/add-blogpost/add-blogpost.component.html
@@ -28,7 +28,10 @@
                 </div>
             </div>
             <div class="mt-3">
-                <label class="form-label" for="featureImageUrl">Featured Image Url</label>
+                <label class="form-label" for="featureImageUrl">Featured Image Url
+                    <button type="button" class="btn btn-light" (click)="OpenImageSelector()">Select Image</button>
+                </label>
+                    
                 <ng-container *ngIf="model.featuredImageUrl !=='' ">
                     <div>
                         <img [src]="model.featuredImageUrl" height="100" class="my-2">
@@ -68,4 +71,12 @@
 
         </div>
     </form>
+</div>
+
+
+<div class="image-container-model"
+ [ngClass]="{'d-block': isImageSelectorVisible, 'd-none': !isImageSelectorVisible}">
+    <button type="button" class="btn btn-light" style="position: fixed; top: 10px; right: 10px;"
+    (click)="closeImageSelector()">X</button>
+    <app-image-selector></app-image-selector>
 </div>
