--- a/UI/codepulse/src/app/core/components/navbar/navbar.component.html
+++ b/UI/codepulse/src/app/core/components/navbar/navbar.component.html
@@ -10,6 +10,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
          
+         <ng-container *ngIf="user !==undefined && user?.roles?.includes('Writer')">
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Admin
@@ -22,8 +23,25 @@
               <li><a class="dropdown-item" href="#">Something else here</a></li>  -->
             </ul>
           </li>
+         </ng-container>
          
         </ul>
+
+
+        <div class="d-flex">
+          <ng-container *ngIf="user === undefined">
+            <!-- Show login btn-->
+            <a routerLink="/login" class="btn btn-primary">Login</a>
+          </ng-container>
+
+          <ng-container *ngIf="user !==undefined">
+            <div class="d-flex align-items-center">
+              <span>{{user?.email}}</span>
+              <button class="btn btn-primary ms-3" (click)="onLogout()">Logout</button>
+            </div>
+          </ng-container>
+          
+        </div>
        
       </div>
     </div>
